# mmsegmentation

configs/deeplabv3plus/carla/: deeplabv3plus_r50-d8_769x769_40k_cityscapes_config.py  deeplabv3plus_r50-d8_769x769_80k_cityscapes_config.py
configs/deeplabv3plus/tsukuba/: deeplabv3plus_r50-d8_769x769_40k_cityscapes_config.py  ocrnet_hr48_512x1024_80k_cityscapes_config.py
configs/ocrnet/: ,  ocrnet_hr48_512x1024_80k_cityscapes.py
configs/ocrnet/carla/: ocrnet_hr48_512x1024_40k_cityscapes_config.py  ocrnet_hr48_512x1024_80k_cityscapes_config.py
demo/: video_demo.py
mmseg/apis/: inference.py
mmseg/datasets/: __init__.py  carla_cityscapes_dataset.py  cityscapes.py  tsukuba_cityscapes.py  tsukuba_cityscapes_dataset.py
mmseg/models/decode_heads/: __init__.py  cascade_decode_head.py  decode_head.py  ocr_head_no_cls.py
ros_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
ros_ws/src/mmseg_ros/: CMakeLists.txt  setup.py
ros_ws/src/mmseg_ros/launch/: mmseg_ros.launch  video.launch
ros_ws/src/mmseg_ros/src/: mmseg_ros.py
scripts/dataset/: choice_images.py  create_dataset.py  create_dataset_mine.py  create_dataset_tsukuba.py  create_dataset_tsukuba_early.py  create_dataset_tsukuba_later.py  data_augumentation.py  tsukuba_dataset.py
scripts/run/: carla_cytyscapes_ocr_hr_net.sh  tsukuba_cytyscapes_deeplabv3plus.sh  tsukuba_cytyscapes_ocrnet_hrnet.sh
scripts/video_demo_scripts/: deeplabv3plus_carla_cityscapes_769x769.sh  ocrnet_hrnet_carla_cityscapes_512x1024.sh
(+21 files in other folders)
